<resources>
    <string name="app_name">spotify-sdk</string>
    <string name="past_wraps">Past Wraps</string>
    <string name="wrapped_name">wrapped_name</string>
    <string name="wraps">1</string>
    <string name="feed">2</string>
    <string name="settings">3</string>
    <string name="spotify_wrapped_title">Spotify Wrapped</string>
    <string name="create_account">Register</string>
    <string name="log_in">Log In</string>
    <string name="create_account_text">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="generate_new_wrapped">Generate Wrapped</string>
    <string name="login_with_spotify">Login with Spotify</string>
    <string name="update_profile">Update Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="spotify_wrapped">Wrapped Feed</string>
    <string name="settings_description">Settings</string>
    <string name="home_description">home</string>
    <string name="feed_description">feed</string>
    <string name="settings_title">Settings</string>
    <string name="search">Search</string>
    <string name="friends_add">friends add</string>
    <string name="persons_username">Username</string>
    <string name="post_content">post content</string>
    <string name="tentative">like and comment and share buttons will go here</string>
    <string name="feed_Button">Feed</string>
    <string name="liked_commented">Liked/Commented</string>
    <string name="top_artists">Top Artist</string>
    <string name="top_genres">Top Genre</string>
    <string name="top_genre">Top Genre</string>
    <string name="the_user_s_top_artist">The user\'s top artist</string>
    <string name="like_button_for_users">like button for users</string>
    <string name="comment_for_users">comment for users</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="enter">enter</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="refresh">Refresh</string>
    <string-array name="timeSpans">
        <item>4 weeks</item>
        <item>6 months</item>
        <item>Several years</item>
    </string-array>
</resources>
