<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/grey"
        android:text="@string/settings_title"
        android:textSize="28sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Reset Password Button -->
    <Button
        android:id="@+id/update_profile"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/dark_pink"
        android:text="Reset Password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title" />


    <!-- change email Button -->

    <Button
        android:id="@+id/change_email"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/dark_pink"
        android:text="Change Email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_profile" />

    <Button
        android:id="@+id/delete_account"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/dark_pink"
        android:text="@string/delete_account"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/change_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/log_out" />

    <!-- Logout Button -->
    <Button
        android:id="@+id/log_out"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/dark_pink"
        android:text="@string/log_out"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/delete_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navigation_buttons" />

    <LinearLayout
        android:id="@+id/navigation_buttons"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/light_green"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/wrapped_btn"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:contentDescription="@string/home_description"
            android:scaleType="fitCenter"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/feed_btn"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:contentDescription="@string/feed_description"
            android:scaleType="fitCenter"
            android:src="@drawable/feed" />

        <ImageButton
            android:id="@+id/settings_btn"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:contentDescription="@string/settings_description"
            android:scaleType="fitCenter"
            android:src="@drawable/setting" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
