<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageButton
            android:id="@+id/addFriendsButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="360dp"
            android:layout_marginRight="70dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/friends" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_buttons"
        android:backgroundTint="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/light_green"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/wrapped_btn"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:src="@drawable/home"
            android:scaleType="fitCenter"
            android:contentDescription="@string/home_description"/>

        <ImageButton
            android:id="@+id/feed_btn"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:src="@drawable/feed"
            android:scaleType="fitCenter"
            android:contentDescription="@string/feed_description" />

        <ImageButton
            android:id="@+id/settings_btn"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:src="@drawable/setting"
            android:scaleType="fitCenter"
            android:contentDescription="@string/settings_description"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>