<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/persons_username"
                    android:textSize="18sp"
                    android:background="@color/darker_grey"/>

                <Button
                    android:id="@+id/follow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow"
                    android:textSize="18sp"
                    app:cornerRadius="0dp" />


            </LinearLayout>


            <ImageView
                android:layout_marginTop="4dp"
                android:id="@+id/top_artist_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/user"
                android:scaleType="fitCenter"
                android:layout_marginStart="140dp"
                android:contentDescription="@string/the_user_s_top_artist"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/artists_summary"
                        android:layout_width="185dp"
                        android:layout_height="50dp"
                        android:text="@string/top_artists"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/topArtist"
                        android:layout_width="174dp"
                        android:layout_height="50dp"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/genres_summary"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/top_genre"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/topGenre"
                        android:layout_width="174dp"
                        android:layout_height="50dp"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tracks_summary"
                        android:layout_width="185dp"
                        android:layout_height="50dp"
                        android:text="@string/top_tracks"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/topTrack1"
                        android:layout_width="185dp"
                        android:layout_height="27dp"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/topTrackArtist1"
                        android:layout_width="185dp"
                        android:layout_height="29dp"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/topTrack2"
                        android:layout_width="185dp"
                        android:layout_height="26dp"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/topTrackArtist2"
                        android:layout_width="185dp"
                        android:layout_height="27dp"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/topTrack3"
                        android:layout_width="185dp"
                        android:layout_height="25dp"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/topTrackArtist3"
                        android:layout_width="185dp"
                        android:layout_height="26dp"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>